--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" >
+<div *ngIf="isLogin" class="wrapper" >
     <div class="sidebar" data-color="danger" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
         <app-sidebar></app-sidebar>
         <div class="sidebar-background" style="background-image: url(./assets/img/sidebar-4.jpg)"></div>
@@ -21,3 +21,6 @@
 </div>
 
 </div>
+
+<router-outlet *ngIf="!isLogin" ></router-outlet>
+
