--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -18,7 +18,7 @@
         <div class="copyright pull-right">
             &copy;
             {{test | date: 'yyyy'}}, made with love by
-            <a href="https://www.creative-tim.com" target="_blank">Amacle Studio</a> for a better web.
+            <a href="https://amaclestudio.com" target="_blank">Amacle Studio</a> for a better web.
         </div>
     </div>
 </footer>
