--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,9 +1,10 @@
 <div class="logo">
     <a href="https://www.creative-tim.com" class="simple-text">
-        <div class="logo-img">
-            <img src="/assets/img/angular2-logo-red.png"/>
+        <div class="logo-img" style="height: 150px;">
+           
+            <img src="/assets/img/charity.png" class="allign-center" style="width: 80px; height: fit-content;"/>
         </div>
-        Creative Tim
+
     </a>
 </div>
 <div class="sidebar-wrapper">
@@ -36,13 +37,7 @@
                     <span class="d-lg-none d-md-block">Some Actions</span>
                 </p>
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Mike John responded to your email</a>
-                <a class="dropdown-item" href="#">You have 5 new tasks</a>
-                <a class="dropdown-item" href="#">You're now friend with Andrew</a>
-                <a class="dropdown-item" href="#">Another Notification</a>
-                <a class="dropdown-item" href="#">Another One</a>
-            </div>
+           
         </li>
         <li class="nav-item">
             <a class="nav-link" href="javascript:void(0)">
@@ -62,4 +57,22 @@
             </a>
         </li>
     </ul>
+    <ul class="nav">
+        <li (click)="logout()" routerLinkActive="active"  class=" nav-item">
+            <a class="nav-link" [routerLink]="">
+              
+                <p>Logout</p>
+            </a>
+        </li>
+    </ul>
+    <ul class="nav">
+        <li routerLinkActive="active" class="active-pro nav-item">
+            <a class="nav-link" [routerLink]="null">
+                <i class="material-icons">unarchive</i>
+                <p >{{self}} ID</p>
+            </a>
+        </li>
+    </ul>
+   
+    
 </div>
