--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-8">
         <div class="card">
           <div class="card-header card-header-danger">
-            <h4 class="card-title">Add {{this.toadd}}</h4>
+            <h4 class="card-title">Add {{this.sub}}</h4>
             <p class="card-category">Complete his/her profile</p>
           </div>
           <div class="card-body">
@@ -66,7 +66,7 @@
                 </div>
                 <div class="col-md-6">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Passwork" type="text"
+                    <input matInput placeholder="Password" type="text"
                       [(ngModel)]="password">
                   </mat-form-field>
                 </div>
